fix: improve compaction progress contrast

--- a/src/containers/Tenant/Diagnostics/Overview/TableInfo/CompactTableAction/CompactTableAction.scss
+++ b/src/containers/Tenant/Diagnostics/Overview/TableInfo/CompactTableAction/CompactTableAction.scss
@@ -36,7 +36,7 @@
         overflow: hidden;
 
         width: 100%;
-        height: 4px;
+        height: 6px;
 
         border-radius: var(--g-border-radius-xs);
         background-color: var(--g-color-base-info-medium);
@@ -46,7 +46,7 @@
         height: 100%;
 
         border-radius: inherit;
-        background-color: var(--g-color-base-brand);
+        background-color: var(--g-color-base-info-heavy);
 
         transition: width 0.4s ease;
     }
